# Interview-task

./: README.md  base.notebook.ipynb  main.py  pyproject.toml
data/: llm_out4.0.csv  llm_out5.0.csv
data/InterviewTask/AI/: .~lock.Interview Task.docx#  .~lock.conditions.doc#  .~lock.gold_records.csv#  DataDictionary.md  Interview Task.docx  conditions.doc  gold_cases.csv  gold_records.csv  gold_records_merged.csv  records.csv  test.csv
data/llmdata/: llm_out1.csv
data/llmdata/archive/: llm_out1.0.csv  llm_out2.0.csv  llm_out3.0.csv
data/pre-processeddata/: preprocessed_data.csv
data/processeddata/: processeddf.csv
output/: eval_report.md  predictions.csv
outputs/: data_report.json  data_report.md  eval_report.md  predictions.csv
schema/: modeloutput.py  riskcalculatorinput.py
src/triage/: __main__.py  cli.py  features.py  ingest.py  injest.py  logging_config.py  model.py  predict.py  validate.py
tests/: model_rf.py  rf_priority_model.joblib  test_cli.py  test_preprocess.py  test_risk_evaluator.py  test_validate_csv.py
