[project]
name = "interview-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "tabulate>=0.9.0",
    "tree>=0.2.4",
]
